@@ -1,5 +1,8 @@
 2012-01-02  6.7.4-5 Glenn Randers-Pehrson <glennrp@image...>
   * Removed PNG_USE_CLONE cruft from the PNG encoder (see 2011-11-19 entry)
+  * Promote image depths 9-15 to 16 to avoid crashing in the PNG
+    encoder (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20098).
 
 2011-01-01  6.7.4-4 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.4-4, SVN revision 6318.
